@@ -6,6 +6,7 @@
 #             Can't substitute requireNamespace() for require() for gam and quantreg packages. John
 # 2014-11-21: Added 'offset' argument with default 0:  offset= sigmaHat(model) for use with
 #             marginal model plots.  Fixed spread smooths as well
+# 2015-01-27: gam() and s() now imported from mgcv rqss(), qss(), and fitted.rqss() from quantreg. John
 
 default.arg <- function(args.list, arg, default){
     if (is.null(args.list[[arg]])) default else args.list[[arg]]
@@ -79,7 +80,7 @@ loessLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
 
 gamLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
               draw=TRUE, offset=0) {
-    if (!require("mgcv")) stop("mgcv package missing")
+#    if (!require("mgcv")) stop("mgcv package missing")
     lty <- default.arg(smoother.args, "lty", 1)
     lwd <- default.arg(smoother.args, "lwd", 2)
     lty.spread <- default.arg(smoother.args, "lty.spread", 2)
@@ -109,7 +110,7 @@ gamLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
     on.exit(options(warn))
 # new June 18, 2014
     fam1 <- if(is.null(link)) fam else fam(link)
-    fit <- try(mgcv::gam(y ~ s(x, k=k, bs=bs), weights=w, family=fam1))
+    fit <- try(gam(y ~ s(x, k=k, bs=bs), weights=w, family=fam1))
 # end bug fix.
     if (class(fit)[1] != "try-error"){
             if (log.x) x <- exp(x)
@@ -123,8 +124,8 @@ gamLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
     if(spread) { 
         res <- residuals(fit)
         pos <- res > 0
-        pos.fit <- try(mgcv::gam(I(res^2) ~ s(x, k=k, bs=bs), subset=pos), silent=TRUE)
-        neg.fit <- try(mgcv::gam(I(res^2) ~ s(x, k=k, bs=bs), subset=!pos), silent=TRUE)
+        pos.fit <- try(gam(I(res^2) ~ s(x, k=k, bs=bs), subset=pos), silent=TRUE)
+        neg.fit <- try(gam(I(res^2) ~ s(x, k=k, bs=bs), subset=!pos), silent=TRUE)
         if(class(pos.fit)[1] != "try-error"){
             y.pos <- if (log.y) exp(fitted(fit) + sqrt(offset^2 + predict(pos.fit, data.frame(x=x))))
             else fitted(fit) + sqrt(offset^2 + predict(pos.fit, data.frame(x=x)))
@@ -150,7 +151,7 @@ gamLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
 
 quantregLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
                    draw=TRUE, offset=0) {
-    if (!require("quantreg")) stop("quantreg package missing")
+#    if (!require("quantreg")) stop("quantreg package missing")
     if (!package.installed("Matrix")) stop("the Matrix package is missing")
     if (!package.installed("MatrixModels")) stop("the MatrixModels package is missing")
     if (!package.installed("SparseM")) stop("the SparseM package is missing")
@@ -168,16 +169,16 @@ quantregLine <- function(x, y, col, log.x, log.y, spread=FALSE, smoother.args,
     x <- x[ord]
     y <- y[ord]
     if (!spread){
-        fit <- quantreg::rqss(y ~ qss(x, lambda=lambda))
+        fit <- rqss(y ~ qss(x, lambda=lambda))
         if (log.x)  x <- exp(x)
         y <-if (log.y) exp(fitted(fit)) else fitted(fit)
         if(draw) lines(x, y, lwd=lwd, col=col, lty=lty)  else
            out <- list(x=x, y=x)
     }
     else{
-        fit <- quantreg::rqss(y ~ qss(x, lambda=lambda))
-        q1fit <- quantreg::rqss(y ~ qss(x, lambda=lambda), tau=0.25)
-        q3fit <- quantreg::rqss(y ~ qss(x, lambda=lambda), tau=0.75)
+        fit <- rqss(y ~ qss(x, lambda=lambda))
+        q1fit <- rqss(y ~ qss(x, lambda=lambda), tau=0.25)
+        q3fit <- rqss(y ~ qss(x, lambda=lambda), tau=0.75)
         if (log.x) x <- exp(x)
         y <- if(log.y) exp(fitted(fit)) else fitted(fit)
         y.q1 <- if(log.y) exp(fitted(q1fit)) else fitted(q1fit)
